Add human disease options to admin feature page
Two checkboxes to enable human diseases and plot on frontpage

--- a/app/views/admin/features_enabled.html.erb
+++ b/app/views/admin/features_enabled.html.erb
@@ -57,6 +57,15 @@
   <%= admin_checkbox_setting(:organisms_enabled, 1, Seek::Config.organisms_enabled,
                              "Organisms enabled", "Whether the users can register organisms in SEEK.") %>
 
+  <%= admin_checkbox_setting(:human_diseases_enabled, 1, Seek::Config.human_diseases_enabled,
+                             "Human diseases enabled", "Whether the users can register human diseases in SEEK.",
+                             :onchange=>toggle_appear_javascript('human_diseases_plot')) %>
+  <div id="human_diseases_plot" class="additional_settings" style="<%= show_or_hide_block Seek::Config.human_diseases_enabled -%>">
+    <%= admin_checkbox_setting(:human_diseases_plot_enabled, 1, Seek::Config.human_diseases_plot_enabled,
+                               "Show plot on SEEK frontpage", "A sunburst plot will be displayed on the frontpage, which contains annotated human diseases and counts.") %>
+  </div>
+
+
   <%= admin_checkbox_setting(:publications_enabled, 1, Seek::Config.publications_enabled,
                              "Publications enabled", "Whether the users can register publications in SEEK.") %>
 
