--- a/app/views/data_files/multi-steps/_basic_metadata.html.erb
+++ b/app/views/data_files/multi-steps/_basic_metadata.html.erb
@@ -20,6 +20,11 @@
       </label>
     </div>
     <%= render :partial => 'projects/project_selector', locals: {resource: @data_file, allow_nil: Seek::Config.is_virtualliver} -%>
+    <% if Seek::Config.human_diseases_enabled %>
+      <div class="form-group">
+        <%= f.fancy_multiselect :human_diseases, { possibilities: HumanDisease.order(:title).all, with_new_link: true, hidden: false } %>
+      </div>
+    <% end %>
     <%= render :partial => 'assets/select_tags', locals: {collapsed: true} if DataFile.is_taggable? %>
     <%= cancel_button(data_files_path) -%>
     <div class='multi-step-buttons'>
